--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "scripts": {
     "start": "node ./bin/www"
   },
+  "engines": {
+    "node": ">= 0.10.0"
+  },
   "dependencies": {
     "body-parser": "~1.12.0",
     "cookie-parser": "~1.3.4",
@@ -26,5 +29,11 @@
     "url": "https://github.com/emanuelpessoa/mean-seed/issues"
   },
   "homepage": "https://github.com/emanuelpessoaa/mean-seed#readme",
-  "devDependencies": {}
+  "devDependencies": {
+    "grunt": "~0.4.5",
+    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-contrib-concat": "~0.4.0",
+    "grunt-contrib-uglify": "~0.5.0"
+  }
 }
