--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,7 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.4.3",
-    "angular-route": "~1.4.3"
+    "angular": "^1.5.5",
+    "angular-ui-router": "^0.3.0"
   }
 }
