--- a/package.json
+++ b/package.json
@@ -31,9 +31,10 @@
   "homepage": "https://github.com/emanuelpessoaa/mean-seed#readme",
   "devDependencies": {
     "grunt": "~0.4.5",
-    "grunt-contrib-jshint": "~0.11.3",
-    "grunt-contrib-watch": "~0.6.1",
     "grunt-contrib-concat": "~0.5.1",
-    "grunt-contrib-uglify": "~0.11.0"
+    "grunt-contrib-jshint": "~0.11.3",
+    "grunt-contrib-uglify": "~0.11.0",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-injector": "^1.0.0"
   }
 }
